--- a/package.json
+++ b/package.json
@@ -4,14 +4,42 @@
   "description": "test project for FSD",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --config ./build/webpack.dev.conf.js --open",
+    "build": "webpack --config ./build/webpack.build.conf.js"
   },
+  "browserslist": [
+    "last 2 version"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Taranovskiy/FSD-frontend-2step.git"
   },
   "author": "Vladimir Taranovskiy",
   "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "autoprefixer": "^9.6.0",
+    "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.0.3",
+    "css-loader": "^2.1.1",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
+    "file-loader": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
+    "path": "^0.12.7",
+    "postcss-loader": "^3.0.0",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3",
+    "webpack-dev-server": "^3.7.1",
+    "webpack-merge": "^4.2.1"
+  },
   "bugs": {
     "url": "https://github.com/Taranovskiy/FSD-frontend-2step/issues"
   },
