--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --config ./build/webpack.dev.conf.js --open",
-    "build": "webpack --config ./build/webpack.build.conf.js"
+    "build": "webpack --config ./build/webpack.build.conf.js",
+    "eslint-fix": "eslint --fix --ext .js ./src",
+    "eslint-report": "eslint --ext .js ./src",
+    "puglint-report": "pug-lint ./src -r inline",
+    "stylelint-report": "stylelint ./src",
+    "lint": "npm run eslint-report && npm run puglint-report && npm run stylelint-report"
   },
   "browserslist": [
     "last 2 version"
@@ -25,6 +30,9 @@
     "css-loader": "^2.1.1",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.18.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
@@ -32,9 +40,14 @@
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
+    "pug-lint": "^2.6.0",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "stylelint": "^10.1.0",
+    "stylelint-config-airbnb": "0.0.0",
+    "stylelint-order": "^3.0.0",
+    "stylelint-scss": "^3.8.0",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.7.1",
@@ -43,5 +56,6 @@
   "bugs": {
     "url": "https://github.com/Taranovskiy/FSD-frontend-2step/issues"
   },
-  "homepage": "https://github.com/Taranovskiy/FSD-frontend-2step#readme"
+  "homepage": "https://github.com/Taranovskiy/FSD-frontend-2step#readme",
+  "dependencies": {}
 }
