--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,10 @@
       "browser": true,
       "es6": true
   },
-  "extends": "airbnb-base",
+  "extends": [
+    "airbnb-base",
+    "prettier"
+  ],
   "globals": {
       "Atomics": "readonly",
       "SharedArrayBuffer": "readonly"
@@ -16,6 +19,7 @@
       "sourceType": "module"
   },
   "plugins": [
+    "prettier"
   ],
   "rules": {
     "linebreak-style": ["error", "windows"]
