--- a/package.json
+++ b/package.json
@@ -32,13 +32,18 @@
     "cssnano": "^4.1.10",
     "eslint": "^6.0.1",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^2.5.0",
+    "lint-staged": "^8.2.1",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
+    "prettier": "^1.18.2",
     "pug": "^2.0.4",
     "pug-lint": "^2.6.0",
     "pug-loader": "^2.4.0",
