--- a/package.json
+++ b/package.json
@@ -10,15 +10,7 @@
     "eslint-report": "eslint --ext .js ./src",
     "puglint-report": "pug-lint ./src -r inline",
     "stylelint-report": "stylelint ./src",
-    "lint": "npm run eslint-report && npm run puglint-report && npm run stylelint-report",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js}": [
-      "npm run lint --max-warnings=0"
-      "prettier --write",
-      "git add"
-    ]
+    "lint": "npm run eslint-report && npm run puglint-report && npm run stylelint-report"
   },
   "browserslist": [
     "last 2 version"
@@ -46,7 +38,6 @@
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^2.5.0",
-    "lint-staged": "^8.2.1",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
